Add Google Analytics tracking script
Added Google Analytics tracking script to index.html.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     />
 
     <script src="https://cdn.tailwindcss.com"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K7ZR33H629"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-K7ZR33H629');
+</script>
     <style>
       /* Custom Tailwind Configuration */
       tailwind.config = {
